--- a/play_quantik.ipynb
+++ b/play_quantik.ipynb
@@ -125,11 +125,9 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "57d4626b4225adfa83ceb41487a1c09c69492c97d133c7ab730de64d31e41020"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit (conda)",
+   "display_name": "Python 3.8.5 ('base')",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -143,6 +141,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "5d41b2972de3a62376174166eec02480fd478480fa849b981774974e6702a3c8"
+   }
   }
  },
  "nbformat": 4,
